--- a/stylesheets/layout/_navigation.scss
+++ b/stylesheets/layout/_navigation.scss
@@ -1,93 +1,88 @@
 // Custom Navigation
-nav {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  align-items: center;
-  margin-bottom: 30px;
-  padding: 30px 0;
+.et_pb_menu {
+  background: transparent !important;
 
-  #lottie {
-    height: 60px;
-    width: 60px;
-  }
-
-  .toggle {
-    display: none;
-  }
-
-  .logo {
-    display: inline-block;
-
-    img {
-      vertical-align: middle;
-    }
-
-    &:a {
-      display: block;
-    }
-  }
-
-  ul {
+  .et_pb_menu_inner_container {
     display: flex;
     justify-content: space-between;
-    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    margin-bottom: 30px;
+    padding: 30px 0;
   }
-  
-  li {
-    text-transform: uppercase;
-    padding: 0 22px;
 
-    a {
-      color: #fff;
-      font-weight: normal;
-      transition: all .15s ease;
+  .et_pb_menu__menu {
+    flex: auto;
+    justify-content: flex-end;
+  }
+}
 
-      &:hover {
-        color: $primary-color;
-        letter-spacing: 1px;
-      }
+.menu-item {
+  text-transform: uppercase;
+  padding: 0 22px;
+
+  & > a {
+    color: #fff;
+    font-weight: normal;
+    transition: all .15s ease;
+    padding: none !important;
+
+    &:hover {
+      color: $primary-color;
+      letter-spacing: 1px;
     }
   }
 }
 
-// Mobile Styling
-@media (max-width: $breakpoint) {
-  nav {
+#menu-main-menu > li {
+  padding: 0 20px;
 
-    .toggle {
-      display: block;
-    }
+  & > a {
+    padding: 0;
+  }
 
-    ul {
-      display: none;
-      flex-direction: column;
-      flex-basis: 100%;
-      flex-grow: 1;
-      width: 100%;
-      background: $black-tint;
-      box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
+  &.button {
+    padding: 0;
+    margin: 0 20px;
+
+    & > a {
       padding: 15px;
-      z-index: 3000;
-      margin-top: 10px;
-      border-radius: $global-radius;
-    }
+      font-weight: bold;
+      font-size: 1.125rem;
 
-    li {
-      margin: 8px 0;
-      
-      a {
-        display: block;
-
-        &:hover {
-          color: $white;
-        }
+      &:hover {
+        color: #fff !important;
+        text-decoration: none;
       }
-    }
-
+    } 
   }
+}
 
-  .active {
-    display: flex;
+.mobile_nav .mobile_menu_bar::before {
+  color: #fff !important;
+  height: 60px;
+  width: 60px;
+  font-size: 60px;
+
+  &:hover {
+    opacity: 0.8;
   }
+}
+
+.et_mobile_menu {
+  border-color: $primary-color;
+  animation: borderCycle $cycle-duration ease-in-out alternate;
+  animation-iteration-count: infinite;
+}
+
+#mobile_menu1 .button > a {
+  color: #fff;
+  font-weight: bold;
+}
+
+// Cycle through text colors
+@keyframes borderCycle {
+  0%   {border-color: $primary-color;}
+  33%  {border-color: $secondary-color;}
+  100%  {border-color: $alternate-color;}
 }
