--- a/stylesheets/layout/sections/_involved.scss
+++ b/stylesheets/layout/sections/_involved.scss
@@ -2,7 +2,8 @@
 
 #involved {
   background: #fff;
-  z-index: 200;
+  z-index: 5;
+  padding-bottom: 66px !important;
 
     // Custom Divider
     &:after {
@@ -11,12 +12,13 @@
       background: url('https://nonprofit.eborall.net/wp-content/themes/diviSpecial-child/images/divider-3.svg') no-repeat;
       background-size: cover;
       background-position-x: center;
-      height: 57px;
-      margin-bottom: -1px;
+      height: 100px;
+      margin-bottom: -75px;
+      background-color: $light-gray;
     }
 
     img {
-      margin: -80px 0 -40px 0;
+      margin: -100px 0 -80px 0;
       z-index: -500;
       transition: all 0.4s ease-in-out;
       animation: float 6s ease-in-out infinite;
@@ -30,9 +32,19 @@
 
 @media (max-width: $breakpoint) {
   #involved {
+
+    &:after {
+      height: 0;
+    }
+
+    .button.large {
+      max-width: 100%;
+      margin: 25px 0 50px 0;
+    }
+
     img {
-      margin-top: -80px;
-      margin-bottom: -50px;
+      margin-top: -60px;
+      margin-bottom: -65px;
     }
 
     .illustrations p {
@@ -46,11 +58,20 @@
     transform: translateY(0);
   }
 
+  25% {
+    transform: translateY(-5px) rotate(5deg);
+  }
+
   50% {
-    transform: translateY(-3px);
+    transform: translateY(0);
+  }
+
+  75% {
+    transform: translateY(-5px) rotate(-6deg);
   }
 
   100% {
     transform: translateY(0);
   }
+  
 }
