--- a/stylesheets/layout/sections/_testimonials.scss
+++ b/stylesheets/layout/sections/_testimonials.scss
@@ -8,7 +8,7 @@
     border-radius: 30px;
     box-shadow: 0 0 50px rgba(0, 0, 0, .16);
     padding: 50px;
-    z-index: 300;
+    z-index: 8;
 
     img {
       border-radius: 100%;
@@ -51,8 +51,12 @@
 
 @media (max-width: $breakpoint) {
   #testimonials {
+    margin: 0;
+
     .module {
       .quote {
+          display: inline;
+
           span,
           p {
             text-align: center;
