--- a/stylesheets/abstracts/_variables.scss
+++ b/stylesheets/abstracts/_variables.scss
@@ -10,10 +10,11 @@ $white: #fff;
 
 $light-gray: #f7f9fc;
 
-//border-radius
+//Global Border-radius
 $global-radius: 15px;
 
 // Mobile Breakpoint
 $breakpoint: 980px;
 
+// Animation Duration
 $cycle-duration: 30s;
