--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -35,9 +35,8 @@
 @import
 'components/button',
 'components/card',
-'components/menu',
-'components/checkout';
+'components/checkout-modal';
 
-// Dark Mode for Fun
+// Dark Mode for fun
 @import
 'theme/dark';
