--- a/stylesheets/base/_base.scss
+++ b/stylesheets/base/_base.scss
@@ -9,12 +9,12 @@
 }
 
 .et_pb_row {
-  padding: 0 0 30px 0;
+  padding: 0 0 30px;
 }
 
 @media (max-height: 980px) {
   .et_pb_row {
-    padding: 0 0 30px 0;
+    padding: 0 0 30px;
   }
 }
 
@@ -31,20 +31,24 @@ a {
   }
 }
 
-section:not(:first-child) {
-  padding-top: 25px;
+section {
+  &:not(:first-child) {
+    padding-top: 25px;
+  }
 }
 
 @media (max-width: $breakpoint) {
-  section:not(:first-child) {
-    padding-top: 15px;
+  section {
+    &:not(:first-child) {
+      padding-top: 15px;
+    }
   }
 
   .container,
   .et_pb_row {
-    width: 92%;
+    width: 90%;
   }
-  
+
 }
 
 // Layout Helpers
@@ -74,6 +78,6 @@ section:not(:first-child) {
 // Mobile Fixes
 @media (max-height: $breakpoint) {
   .et_pb_row {
-    padding: 0 0 20px 0;
+    padding: 0 0 20px;
   }
 }
