--- a/stylesheets/components/_button.scss
+++ b/stylesheets/components/_button.scss
@@ -1,34 +1,34 @@
 // Button component
 
 .button {
-  background: $primary-color;
-  font-size: 1.125rem;
-  color: #fff;
-  font-weight: bold;
-  border-radius: 15px;
-  box-shadow: 0 0 15px $primary-color;
-  transition: all .15s ease;
-  padding: 10px 15px;
-  text-transform: initial;
-  text-decoration: none;
   animation: colorCycle $cycle-duration ease-in-out alternate;
   animation-iteration-count: infinite;
+  background: $primary-color;
+  border-radius: 15px;
+  box-shadow: 0 0 15px $primary-color;
+  color: #fff;
+  font-size: 1.125rem;
+  font-weight: bold;
+  padding: 10px 15px;
+  text-decoration: none;
+  text-transform: initial;
+  transition: .15s ease;
 
   &.large {
     display: block;
-    max-width: 300px;
-    margin: 0 auto;
     font-size: 1.5rem;
+    margin: 0 auto;
+    max-width: 300px;
     padding: 20px;
   }
 
   &:hover {
-    box-shadow: 0 0 8px $primary-color;
-    transform: translateY(-2px) !important;
-    text-decoration: none;
-    color: #fff;
     animation: colorCycle .75s alternate;
     animation-iteration-count: infinite;
+    box-shadow: 0 0 8px $primary-color;
+    color: #fff;
+    text-decoration: none;
+    transform: translateY(-2px) !important;
   }
 
   img {
@@ -37,24 +37,24 @@
 
   &:active {
     box-shadow: inset 5px 5px 15px darken($primary-color, 5), inset -5px -5px 15px darken($primary-color, 10);
-    box-shadow: 0 0 0 $primary-color;
   }
 
   &.white {
+    animation: none;
     background: rgba(0, 0, 0, 0);
     border: 2px solid $white;
-    padding: 9px 15px;
     box-shadow: none;
-    animation: none;
+    padding: 9px 15px;
+
 
     &:hover {
-      color: $black;
       background: #fff;
+      color: $black;
       transform: translateY(-2px);
     }
   }
 }
-
+// Tablet Breakpoint
 @media (max-width: $breakpoint) {
   .button,
   .button.white {
@@ -66,7 +66,18 @@
 
 // Color Cycling Animation
 @keyframes colorCycle {
-  0%   {background-color: $primary-color; box-shadow: 0 0 15px $primary-color;}
-  33%  {background-color: $secondary-color; box-shadow: 0 0 15px $secondary-color;}
-  100%  {background-color: $alternate-color; box-shadow: 0 0 15px $alternate-color;}
+  0% {
+    background-color: $primary-color;
+    box-shadow: 0 0 15px $primary-color;
+  }
+
+  33% {
+    background-color: $secondary-color;
+    box-shadow: 0 0 15px $secondary-color;
+  }
+
+  100% {
+    background-color: $alternate-color;
+    box-shadow: 0 0 15px $alternate-color;
+  }
 }
