--- a/stylesheets/components/_card.scss
+++ b/stylesheets/components/_card.scss
@@ -2,22 +2,22 @@
 
 .card {
   background: #fff;
-  box-shadow: 0 0 25px rgba(0,0,0,.16);
   border-radius: $global-radius;
+  box-shadow: 0 0 25px rgba(0, 0, 0, .16);
   padding: 25px 15px;
 
   .avatar img {
-    border-radius: 100%;
     border: 2px solid rgba(112, 112, 112, .05);
-    overflow: hidden;
+    border-radius: 100%;
     height: 150px;
-    width: 150px;
     margin-bottom: 5px;
+    overflow: hidden;
+    width: 150px;
   }
 
   .title {
     font-size: 1.25rem;
-    padding-bottom: 0; 
+    padding-bottom: 0;
   }
 
   .desc {
@@ -26,8 +26,8 @@
 
   .button {
     display: block;
+    margin: 25px auto 0;
     max-width: 114px;
-    margin: 25px auto 0 auto;
   }
 }
 
@@ -48,9 +48,9 @@
       width: 70%;
 
       .button {
-        max-width: 130px;
         margin-left: 0;
         margin-right: 0;
+        max-width: 130px;
       }
 
       p,
