--- a/stylesheets/components/_checkout-modal.scss
+++ b/stylesheets/components/_checkout-modal.scss
@@ -1,24 +1,24 @@
 // Checkout Modal
 
 .checkout {
-  display: none;
   align-items: center;
-  justify-content: center;
-  position: fixed;
-  width: 100%;
+  background: rgba(11, 9, 28, .75);
+  display: none;
   height: 100%;
+  justify-content: center;
   left: 0;
+  position: fixed;
   top: 0;
-  background: rgba(11, 9, 28, 0.75);
+  width: 100%;
   z-index: 200;
 
   img {
-    transition: .25s ease;
     opacity: 1;
+    transition: .25s ease;
 
     &:hover {
+      opacity: .5;
       transform: rotate(12deg);
-      opacity: 0.5;
     }
   }
 
@@ -29,26 +29,26 @@
   div {
     animation: colorCycle 1s ease-in-out alternate;
     animation-iteration-count: infinite;
+    border-radius: $global-radius;
     color: $white;
     padding: 75px;
-    border-radius: $global-radius;
     position: relative;
   }
 
   h6 {
-    font-size: 56px;
     color: $white;
+    font-size: 56px;
   }
 
   p {
-    margin-top: 15px;
     font-size: 36px;
+    margin-top: 15px;
   }
 
   a {
     position: absolute;
-    top: 15px;
     right: 25px;
+    top: 15px;
   }
 
 }
@@ -56,9 +56,9 @@
 
 @media (max-width: $breakpoint) {
   .checkout {
-    top: 0;
-    left: 0;
     height: 100%;
+    left: 0;
+    top: 0;
     width: 100%;
 
     div {
@@ -66,13 +66,13 @@
     }
 
     h6 {
-      font-size: 32px;
       color: $white;
+      font-size: 32px;
     }
 
     p {
-      margin-top: 15px;
       font-size: 24px;
+      margin-top: 15px;
     }
   }
 }
