--- a/stylesheets/layout/_navigation.scss
+++ b/stylesheets/layout/_navigation.scss
@@ -3,10 +3,10 @@
   background: transparent !important;
 
   .et_pb_menu_inner_container {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
     align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
     margin-bottom: 30px;
     padding: 30px 0;
   }
@@ -18,14 +18,14 @@
 }
 
 .menu-item {
-  text-transform: uppercase;
   padding: 0 22px;
+  text-transform: uppercase;
 
   & > a {
-    color: #fff;
+    color: $white;
     font-weight: normal;
-    transition: all .15s ease;
-    padding: none !important;
+    padding: 0 !important;
+    transition: .15s ease;
 
     &:hover {
       color: $primary-color;
@@ -42,41 +42,43 @@
   }
 
   &.button {
-    padding: 0;
     margin: 0 20px;
+    padding: 0;
 
     & > a {
-      padding: 15px;
-      font-weight: bold;
       font-size: 1.125rem;
+      font-weight: bold;
+      padding: 15px;
 
       &:hover {
-        color: #fff !important;
+        color: $white !important;
         text-decoration: none;
       }
-    } 
+    }
   }
 }
 
-.mobile_nav .mobile_menu_bar::before {
-  color: #fff !important;
-  height: 60px;
-  width: 60px;
-  font-size: 60px;
+.mobile_nav {
+  .mobile_menu_bar::before {
+    color: $white !important;
+    font-size: 60px;
+    height: 60px;
+    width: 60px;
 
-  &:hover {
-    opacity: 0.8;
+    &:hover {
+      opacity: .8;
+    }
   }
 }
 
 .et_mobile_menu {
-  border-color: $primary-color;
   animation: borderCycle $cycle-duration ease-in-out alternate;
   animation-iteration-count: infinite;
+  border-color: $primary-color;
 }
 
 #mobile_menu1 .button > a {
-  color: #fff;
+  color: $white;
   font-weight: bold;
 }
 
