--- a/stylesheets/layout/sections/_mission.scss
+++ b/stylesheets/layout/sections/_mission.scss
@@ -4,36 +4,36 @@
   background: $light-gray;
   padding-top: 23px !important;
 
-    span {
-      font-size: 1.25rem;
-    }
+  span {
+    font-size: 1.25rem;
+  }
 
-    &:after {
-      display: block;
-      content: '';
-      background: url('https://nonprofit.eborall.net/wp-content/themes/diviSpecial-child/images/divider-2.svg') no-repeat;
-      background-size: cover;
-      background-position-x: center;
-      height: 340px;
-      margin-bottom: -1px;
-      margin-top: -340px;
-    }
+  &::after {
+    background: url('./images/divider-2.svg') no-repeat;
+    background-position-x: center;
+    background-size: cover;
+    content: '';
+    display: block;
+    height: 340px;
+    margin-bottom: -1px;
+    margin-top: -340px;
+  }
 
-    video {
-      border-radius: 25px;
-      overflow: hidden;
-      box-shadow: 0 0 30px rgba(0,0,0,.20);
-      margin: 0 auto;
-      width: 100%;
-      max-width: 588px;
-      max-height: 400px;
-      background: #000;
-    }
+  video {
+    background: $black;
+    border-radius: 25px;
+    box-shadow: 0 0 30px rgba(0, 0, 0, .2);
+    margin: 0 auto;
+    max-height: 400px;
+    max-width: 588px;
+    overflow: hidden;
+    width: 100%;
+  }
 }
 
 @media (max-width: $breakpoint) {
   #mission {
-    &:after {
+    &::after {
       height: 150px;
       margin-top: -150px;
     }
