--- a/stylesheets/base/_base.scss
+++ b/stylesheets/base/_base.scss
@@ -65,6 +65,10 @@ section {
   display: none;
 }
 
+.h-0 {
+  height: 0;
+}
+
 .text-left,
 .text-left > .et_pb_text_inner {
   text-align: left !important;
